Revision history for perl distribution LWPx-UserAgent-Role-Cached

{{$NEXT}}
    - use CHI's built-in serializer support by default (with Sereal) instead
      of serializing in the UserAgent
0.005     2015-02-17 22:59:02-05:00 America/New_York (TRIAL RELEASE)
    - add preliminary ETag cache control support
0.004     2015-02-12 22:55:49-05:00 America/New_York
    - require newer version of Moo's Sub::Quote to get the qsub function
0.003     2015-02-11 22:15:47-05:00 America/New_York
    - more micro-optimizations with Sereal replacing Storable
0.002     2015-02-10 21:40:24-05:00 America/New_York (TRIAL RELEASE)
    - require a version of Moo that allows undef defaults in attributes
    - use faster Type::Tiny rather than MooX::Types::MooseLike
0.001     2015-02-10 18:22:57-05:00 America/New_York (TRIAL RELEASE)
    - Initial release